# fast-downward

./: .gitignore  COMPETITION.txt  README  Vagrantfile  build.py  build_configs.py
benchmarks/: README
src/search/: .directory  CMakeLists.txt  DownwardFiles.cmake  any.h  axioms.cc  causal_graph.cc  domain_transition_graph.cc  domain_transition_graph.h  enforced_hill_climbing_search.cc  enforced_hill_climbing_search.h  evaluator.h  globals.cc  globals.h  heuristic.cc  heuristic.h  linear_program.cc  linear_program.h  open_list.h  operator.cc  operator.h  operator_cost.cc  option_parser.cc  option_parser.h  option_parser_util.h  per_state_information.h  plugin.h  pruning_method.cc  pruning_method.h  search_engine.cc  search_engine.h  search_node_info.h  search_space.cc  search_space.h  standard_scalar_open_list.cc  standard_scalar_open_list.h  state.cc  state.h  state_id.h  state_registry.h  successor_generator.cc  (+6 more)
src/search/heuristics/: additive_heuristic.cc  additive_heuristic.h  blind_heuristic.cc  blind_heuristic.h  critical_path_heuristic.cc  critical_path_heuristic.h  critical_path_heuristic_v1.cc  critical_path_heuristic_v2.cc  critical_path_heuristic_v3.cc  ff_heuristic.cc  ff_heuristic.h  ff_heuristic_debug.cc  goal_count_heuristic.cc  goal_count_heuristic.h  landmark_cut_heuristic.cc  landmark_cut_heuristic.h  landmark_heuristic.cc  landmark_heuristic.h  max_heuristic.cc  max_heuristic.h  max_heuristic_old.h  merge_and_shrink_heuristic.cc  merge_and_shrink_heuristic.h  operator_counting_heuristic.cc  operator_counting_heuristic.h  pattern_database_heuristic.cc  (+5 more)
(+13 files in other folders)
